fix the footer: space-around and align social media icons- center

--- a/css/style.css
+++ b/css/style.css
@@ -287,5 +287,11 @@ footer{
 
 /* ---Responsive Design--- */
 @media (max-width: 600px){
+    .footer-col{
+        display: flex;
+        flex-direction: column;
+    }
+
 }
+
 
